--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<h1>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text Formatting</title>
-</h1>
+</head>
 <body>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
